# pykan

./: .gitignore  hellokan.ipynb  pyproject.toml
kan/scripts/: mnist_test.py
