[tool.poetry]
name = "kan"
version = "0.1.0"
description = ""
authors = ["Matthijs <matthijs.vanderlende@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "3.6.2"
scikit_learn = "1.1.3"
setuptools = "65.5.0"
sympy = "1.11.1"
torch = "2.2.2"
tqdm = "4.66.2"
notebook = "^7.2.2"
pandas = "^2.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
