[tool.poetry]
name = "kan"
version = "0.1.0"
description = ""
authors = ["Matthijs <matthijs.vanderlende@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
# matplotlib = "3.6.2"
# scikit_learn = "1.1.3"
# setuptools = "65.5.0"
# sympy = "1.11.1"
# torch = "2.2.2"
# tqdm = "4.66.2"
# notebook = "^7.2.2"
# pandas = "^2.2.3"
# torchvision = "0.17.2"
torch = "^2.5.1"
matplotlib = "^3.9.2"
scikit-learn = "^1.5.2"
setuptools = "^75.6.0"
sympy = "1.13.1"
tqdm = "^4.67.1"
notebook = "^7.2.2"
pandas = "^2.2.3"
torchvision = "^0.20.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
